--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav ul li a:hover::after{
     padding: 80px 0;
     color: whitesmoke;
     text-align: left;
-    
+    padding-left: 20px; 
 }
 
 .about-col-1 img {
@@ -113,7 +113,20 @@ nav ul li a:hover::after{
     flex-basis:60%;
     order: 2;
     text-align: left;
+    padding-left: 20px;
 }
 .sub-title{
-    font-size: 60px;
+    font-size: 40px;
+    font-weight: 600;
+    color: whitesmoke;
+    font-style: italic;
+    margin-left: 20px; 
+}
+.about-col-2 p {
+    font-size: 18px; /* Adjust the font size as needed */
+    margin-top: 10px; /* Adjust the top margin to align with the "About Me" text */
+    text-align: left; /* Align the text to the left */
+    padding-left: 20px; 
+    padding-right:10px;/* Add left padding as needed */
+    color:beige;
 }
