--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 }
 .container{
 
-    padding: 10px,10%;
+    padding: 10px, 10%;
 }
 
 nav{
@@ -129,4 +129,40 @@ nav ul li a:hover::after{
     padding-left: 20px; 
     padding-right:10px;/* Add left padding as needed */
     color:beige;
+    font-style: oblique;
+}
+.tab-titles{
+    display:flex;
+    margin: 20px 0 40px;
+}
+.tab-links{
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+.tab-links::after{
+    content:'';
+    width:0;
+    height: 3px;
+    background-color: pink;
+    position: absolute;
+    left:0;
+    bottom:-8px;
+    transition:0.5s ;
+}
+.tab-links.active-link::after{
+    width:50%; 
+}
+.tab-contents ul li{
+    list-style:none;
+    margin-left: 60px;
+    margin: 10px 0;
+
+}
+
+.tab-contents ul span{
+    color:goldenrod;
+    font-size: 14 px;
 }
