--- a/style.css
+++ b/style.css
@@ -166,3 +166,10 @@ nav ul li a:hover::after{
     color:goldenrod;
     font-size: 14 px;
 }
+
+.tab-contents{
+    display: none;
+}
+.tab-contents.active-tab{
+    display:block ;
+}
