--- a/style.css
+++ b/style.css
@@ -173,3 +173,44 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display:block ;
 }
+
+/*-------services-------*/
+
+#services{
+     padding: -0px 80px;
+
+}
+
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.services-list div{
+    background: rgb(195, 112, 126);
+    padding: 40px;
+    font-size: 15px;
+    font-weight: 300;
+    border-radius: 10px;
+}
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+    
+}
+.services-list div h2{
+     font-size: 30px;
+     font-weight: 500;
+     margin-bottom: 15px;
+}
+.services-list div a{
+    text-decoration: none;
+    color: purple;
+    font-size: 14px;
+    margin-top:20px;
+    display: inline-block;
+    font-weight: 400;
+ 
+}
