--- a/style.css
+++ b/style.css
@@ -222,3 +222,77 @@ nav ul li a:hover::after{
     transform: translateY(-10px);
 
 }
+/*--------portfolio------*/
+#portfolio{
+    padding:50px 71px;
+}
+.work-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+    
+
+}
+.work {
+    border-radius: 10px;
+    position: relative;
+    width: 300px; /* Set your desired width */
+    height: 350px; /* Set your desired height */
+    overflow: hidden; /* Hide overflowing content if the images are larger */
+}
+.work img {
+    width: 100%; /* Make the image take up the full width of the container */
+    height: auto; /* Maintain the image's aspect ratio */
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+.layer {
+    position: absolute;
+    top: 100%; /* Initially position it at the bottom */
+    left: 0;
+    width: 100%;
+    height: 0; /* Set initial height to 0 */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(88, 68, 16));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s, height 0.5s;
+}
+
+.work:hover .layer {
+    opacity: 1;
+    height: 100%;
+    top: 0;
+}
+
+.layer h3 {
+    color: white;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.layer p {
+    color: white;
+    font-size: 16px;
+    margin: 0 20px;
+}
+
+.layer a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.layer a i {
+    margin-right: 5px;
+}
+
+.work:hover img{
+    transform: scale(1.1);
+}
