--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ nav ul li a:hover::after{
     left: 0;
     width: 100%;
     height: 0; /* Set initial height to 0 */
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(88, 68, 16));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), red);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -295,4 +295,31 @@ nav ul li a:hover::after{
 
 .work:hover img{
     transform: scale(1.1);
+}
+
+.initial-work {
+    display: none; /* Hide initially */
+ }
+ 
+ .work.hidden {
+    display: none; /* Hide additional works initially */
+ }
+
+ .show-more-button {
+    text-align: left;
+    margin-top: 20px;
+    
+}
+
+#show-more {
+    background-color: red; /* Set the background color to red */
+    color: white; /* Set the text color to white */
+    padding: 10px 20px; /* Increase padding for button size */
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+#show-more:hover {
+    background-color: darkred;
 }
